syntax="proto3";
import "google/protobuf/any.proto";

import "common_pb.proto";

package com.distkv.rpc.protobuf;
option java_package="com.distkv.rpc.protobuf.generated";
option java_outer_classname="DistkvProtocol";


// TODO(qwang): Use ReadOnlyRequestType and WriteRequestType to
// avoid writing some specific handler in code.
enum RequestType {

    // basic operations
    None = 0;

    EXIT = 1;

    ACTIVE_NAMESPACE = 2;

    DEACTIVE_NAMESPACE = 3;

    DROP = 4;

    EXPIRE = 5;

    EXISTS = 6;

    TTL = 7;

    // string concept
    STR_PUT = 101;
    STR_GET = 102;

    // list concept
    LIST_PUT = 201;
    LIST_GET = 202;
    LIST_LPUT = 203;
    LIST_RPUT = 204;
    LIST_REMOVE = 205;
    LIST_MREMOVE = 206;

    // set concept
    SET_PUT = 301;
    SET_GET = 302;
    SET_PUT_ITEM = 304;
    SET_REMOVE_ITEM = 305;
    SET_EXISTS = 306;

    // dict concept
    DICT_PUT = 401;
    DICT_GET = 402;
    DICT_PUT_ITEM = 403;
    DICT_GET_ITEM = 404;
    DICT_POP_ITEM = 405;
    DICT_REMOVE_ITEM = 406;

    // Slist concept
    SLIST_PUT = 501;
    SLIST_TOP = 502;
    SLIST_INCR_SCORE = 503;
    SLIST_PUT_MEMBER = 504;
    SLIST_REMOVE_MEMBER = 505;
    SLIST_GET_MEMBER = 506;

    // int concept
    INT_PUT = 601;
    INT_GET = 602;
    INT_INCR = 603;

}

message DistkvRequest {
    string key = 1;
    RequestType requestType = 2;
    google.protobuf.Any request = 3;
    string namespace = 4;
}

message DistkvResponse {
    Status status = 1;
    RequestType requestType = 2;
    google.protobuf.Any response = 3;
}

service DistkvService {
    rpc call(DistkvRequest) returns (DistkvResponse);
}
